# smolnet-portal

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
.github/workflows/: test.yml
docs/: accounts_spec.md  scroll_spec.txt
geminiportal/: app.py  auth.py  db.py  errors.py  favicons.py  models.py  sessions.py  tls.py  urls.py  utils.py
geminiportal/handlers/: __init__.py  base.py  gopherplus.py  scroll.py
geminiportal/protocols/: __init__.py  base.py  gemini.py  gopher.py  scroll.py  spartan.py  text.py
geminiportal/static/: site.css
geminiportal/templates/: about.html  base.html  changes.html  home.html  login.html  profile.html
geminiportal/templates/auth/: _cert-details.html  logged-in.html  logged-out.html  login.html  profile.html
geminiportal/templates/proxy/: base.html  captcha.html  error-response.html  gemini-cert-required.html  gemini-query.html  portal-error.html  server-error.html
geminiportal/templates/proxy/handlers/: gemini.html  scroll-metadata.html  scroll.html
requirements/: requirements-dev.txt  requirements.in  requirements.txt
tests/: test_favicons.py  test_protocols.py  test_urls.py
tools/: bootstrap  gunicorn  quart  sqlite3  start
